--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,23 @@
   }
 }
 
-body {
+/* body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+} */
+
+
+
+
+.animate-link::after {
+  content: "";
+  display: block;
+  height: 1px;
+  width: 0;
+  background: var(--background);
+  transition: width 0.3s ease;
+}
+
+.link-parent:hover .animate-link::after {
+  width: 100%;
 }
