--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,38 +1,14 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-/* body {
-  background: var(--background);
-  color: var(--foreground);
-} */
-
-
-
-
 .animate-link::after {
   content: "";
+  background-color: currentColor;
   display: block;
-  height: 1px;
+  height: 0.1rem;
   width: 0;
-  background: var(--background);
   transition: width 0.3s ease;
 }
 
